# maybe-cc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  a.glsl  a.out  build.rs  maybe.sh  o.c  o.cc  test.ast.json  test.c
.VSCodeCounter/: results.csv  results.md  results.txt
ir-gen/: .gitignore  CMakeLists.txt
ir-gen/include/jsoncpp/: json.h
ir-gen/src/: a.txt  be.cc  be.h  common.h  declarationSpecifier.h  global.cc  global.h  irgen.cc  irgen.h  llirc.cc  llirc.h  macros.h  msglist.h  qualifiedType.h  scopedMap.h  symbolMap.h  util.h  utility.h
ir-gen/src/node/: declaration.cc  declaration.h  def.h  enumerate.cc  enumerate.h  expression.cc  expression.h  initializer.cc  initializer.h  predef.h  statement.cc  statement.h
ir-gen/src/type/: arrayType.h  builder.h  declarationSpecifier.h  def.h  enumType.h  floatingPointType.h  functionType.h  integerType.h  pointerType.h  predef.h  qualified.h  structType.h  type.cc  type.h  unionType.h  voidType.h
ir-gen/src/value/: def.h  predef.h  value.cc  value.h
ir-gen/tests/: main.cc
src/: ir.rs  lang.rs  lexer.rs  lib.rs  main.rs  msg.rs  prep.rs
tests/: test.ast.json  test.c  test.ii  test.ll
tests/errors/: allocate_incomplete_type.c  const_assign.c  evaluate_void.c  specifiers_violation.c
tests/functions/: cast_void_ptr.c  const_expression.c  forward_function.c  forward_struct.c  goto_statement.c  initializer_list.c  short_circuit.c  switch_statement.c
tests/samples/: list.c  qsort.c  qsort_gen.py  test.c
tests/unresolved/: initialize_declarion_order.c  use_typename_as_id.c
tests/warnings/: cast_away_qualifiers.c  declare_nothing.c  duplicate_specifier.c  inner_forward_declaration.c  pointer_cast.c  type_defaults_to_int.c
