[package]
name = "my"
version = "0.1.0"
authors = ["KoishiChan <qwq@koishi.top>"]
edition = "2018"

[build-dependencies]
cmake = "0.1.39"                          # A build dependency for running `cmake` to build a native library 

[dependencies]
myrpg = { path = "myrpg" }
clap = "2.33.0"                   # A simple to use, efficient, and full-featured Command Line Argument Parser 
regex = "1.1.6"             # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…
lazy_static = "1.3.0"            # A macro for declaring lazily evaluated statics in Rust.
